# rust-bevy-wasm-snake

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  snake-143c522716430dd4.js
.cargo/: config.toml
assets/: apple.piskel  banana.piskel  brickwall.piskel  watermelon.piskel
src/: bomb.rs  common.rs  food.rs  gameplay.rs  main.rs  snake.rs  splashscreen.rs  wall.rs
