[package]
name = "snake"
version = "0.1.0"
authors = [ "Markus Silván <msilvan@iki.fi>" ]
readme = "README.md"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
strip = "debuginfo"
