[package]
name = "snake"
version = "0.1.0"
authors = [ "Markus Silván <msilvan@iki.fi>" ]
readme = "README.md"
edition = "2021"

[dependencies]
bevy = "0.9.1"
iyes_loopless = "0.9.1"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
strip = "debuginfo"
