[package]
name = "snake"
version = "0.1.0"
authors = [ "Markus Silván <msilvan@iki.fi>" ]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
wasm-bindgen = "=0.2.83"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
strip = "debuginfo"
